2007-02-05 [colin]	1.93.0cvs8

	* src/vcal_meeting_gtk.c
		Fix times when setting meetings across
		DST borders

2007-02-05 [colin]	1.93.0cvs7

	* src/vcal_meeting_gtk.c
		Better time selection

2007-02-04 [colin]	1.93.0cvs6

	* src/vcal_meeting_gtk.c
		Set wmclass in new windows

2007-02-04 [colin]	1.93.0cvs5

	* src/vcalendar.c
		Use text font in the description field

2007-02-04 [colin]	1.93.0cvs4

	* src/vcal_folder.c
		Verify the existence of the event before
		using it.

2007-02-03 [colin]	1.93.0cvs3

	* src/plugin.c
	* src/vcal_folder.c
	* src/vcal_folder.h
	* src/vcal_manager.c
	* src/vcal_manager.h
	* src/vcal_meeting_gtk.c
	* src/vcal_meeting_gtk.h
	* src/vcal_prefs.c
	* src/vcal_prefs.h
	* src/vcalendar.c
	* src/vcalendar.h
		Fix copyright

2007-01-31 [paul]	1.93.0cvs2

	* src/Makefile.am
		Fix static linking warning on Linux systems,
		probably fixes error on OpenBSD.

2007-01-16 [paul]	1.93.0cvs1

	* src/vcal_folder.c
		Don't force sort_type ASCENDING

2007-01-09 [paul]	1.93

	1.93 released

2007-01-14 [colin]	1.92.0cvs2

	* src/vcalendar.c
		Init prefs before scanning folders. Maybe
		fixes crash reported by Graham Todd on
		claws-mail-users list

2007-01-09 [colin]	1.92.0cvs1

	* src/vcalendar.c
		Fix crash when some fields are missing
		Patch by Markus Schwarzenberg 
		(schwarzb@ipms.fraunhofer.de)

2007-01-09 [paul]	1.92

	1.92 released

2007-01-09 [paul]	1.91.0cvs18

	* po/es.po
	* po/fi.po
	* po/it.po
	* po/pt_BR.po
		updated by Ricardo Mones Lastra, Tommi
		Pirinen, Andrea Spadaccini, and Frederico
		Goncalves Guimaraes

2007-01-05 [colin]	1.91.0cvs17

	* src/vcal_meeting_gtk.c
		Display "Check availability" button greyed out
		instead of hiding it if freebusy uri isn't set

2007-01-05 [colin]	1.91.0cvs16

	* src/vcal_manager.c
		Include the UID as Message-ID for pseudo-
		events

2007-01-04 [colin]	1.91.0cvs15

	* src/vcal_folder.c
		Assign a path to the inbox (meetings)
		Fixes selection via command line

2007-01-03 [paul]	1.91.0cvs14
