@@ -32,7 +32,7 @@ VCalMeeting *vcal_meeting_create(VCalEvent *event);
 VCalMeeting *vcal_meeting_create_hidden(VCalEvent *event);
 gboolean vcal_meeting_send(VCalMeeting *meet);
 gint vcal_meeting_alert_check(gpointer data);
-gboolean vcal_meeting_export_calendar(const gchar *path, gboolean automatic);
-gboolean vcal_meeting_export_freebusy(const gchar *path);
+gboolean vcal_meeting_export_calendar(const gchar *path, const gchar *user, const gchar *pass,gboolean automatic);
+gboolean vcal_meeting_export_freebusy(const gchar *path, const gchar *user, const gchar *pass);
 gboolean attendee_available(VCalAttendee *attendee, const gchar *dtstart, const gchar *dtend, const gchar *contents);
 #endif
